--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.19.3",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.3.12",
     "msw": "^2.3.1",
     "qs": "^6.12.1",
     "react": "^18.3.1",
@@ -20,7 +22,10 @@
     "react-highlight-words": "^0.20.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
+    "react-tsparticles": "^2.12.2",
     "runes2": "^1.1.4",
+    "tailwind-merge": "^2.4.0",
+    "tsparticles": "^3.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
